# Project-Portfolio

./: .gitignore  .gitignore.bak  README.md
CUMTD_Bus_Mapper/bus-mapper/: CMakeLists.txt  clang-format-all
CUMTD_Bus_Mapper/bus-mapper/include/bus/: graphing.h  platform.h  station.h  stop.h  trip.h
CUMTD_Bus_Mapper/bus-mapper/include/graph/: graph.h  graph.hpp  graph_iterator.hpp
CUMTD_Bus_Mapper/bus-mapper/include/utils/: PNG.h  dsets.h  visualizer.h
CUMTD_Bus_Mapper/bus-mapper/src/: CMakeLists.txt  pathfind.cpp  visualize.cpp
CUMTD_Bus_Mapper/bus-mapper/src/bus/: CMakeLists.txt  graphing.cpp  platform.cpp  station.cpp  stop.cpp  trip.cpp
CUMTD_Bus_Mapper/bus-mapper/src/graph/: CMakeLists.txt
CUMTD_Bus_Mapper/bus-mapper/src/utils/: CMakeLists.txt  HSLAPixel.cpp  PNG.cpp  dsets.cpp  lodepng.cpp  visualizer.cpp
CUMTD_Bus_Mapper/bus-mapper/tests/: catch.hpp
CUMTD_Bus_Mapper/bus-mapper/tests/graph/: test_graph.cpp  test_iterator.cpp  test_pathfind.cpp  test_traversal.cpp
PropAI - NBA 2025-2026/: .gitignore  README.md  cleanup_script.py  data_entry.txt  pyproject.toml  requirements.txt  run_cli.py
PropAI - NBA 2025-2026/Sample Data/: 12-31-25 Timberwolves vs Hawks.txt  12-31-25 Warriors vs Hornets.txt  NBA Salaries.txt  Phoenix Suns Stats 2025-26.txt  raw_NBA_Defense_vs_Position_C.txt  raw_NBA_Defense_vs_Position_PG.txt  raw_box_score_example_1.txt  raw_injury_report_example_1.txt  teamdefense25-26.txt
PropAI - NBA 2025-2026/data/db/: nba_props.sqlite3.bak_preseason_rm_20260103_230639
PropAI - NBA 2025-2026/documentation/: 1_MODEL_SUMMARY.md  DATA_AND_BACKTESTING_GUIDE.md  FILE_STRUCTURE.md  GAME_MANAGEMENT.md  HYBRID_MODEL.md  INJURY_PARSER.md  Idea.txt  MODEL_IMPROVEMENTS_SUMMARY.md  MODEL_V9.md  MODEL_VERSION_TRACKING.md  REGRESSION_CONTRIBUTION_MODEL.md  REPORT.md  REPORT_V2.md  REPORT_V6.md  UNDER_MODEL_V2.md  UNDER_MODEL_V2_GUIDE.md
PropAI - NBA 2025-2026/src/nba_props/: cli.py  db.py  paths.py  standings.py  team_aliases.py  util.py  validation.py
PropAI - NBA 2025-2026/src/nba_props.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PropAI - NBA 2025-2026/src/nba_props/engine/: MODEL_DOCUMENTATION.md  __init__.py  accuracy_tracker.py  alerts.py  archetype_db.py  archetypes.py  backtesting.py  edge_calculator.py  edge_engine.py  enhanced_model.py  game_context.py  hybrid_model.py  matchup_advisor.py  minutes_projection.py  model_final.py  model_lab.py  model_production.py  model_v2.py  model_v3.py  model_v4.py  model_v5.py  model_v8.py  model_v9.py  optimization.py  (+7 more)
(+1201 files in other folders)
