file(GLOB SOURCE CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/graph/*.cpp)
# list(APPEND SOURCE ${PROJECT_SOURCE_DIR}/include/graph/graph.hpp)
if (CMAKE_VERSION VERSION_LESS "3.1")
  add_library(graph ${SOURCE})
  set_target_properties(graph PROPERTIES LINKER_LANGUAGE CXX)
  target_include_directories(graph PUBLIC ${PROJECT_SOURCE_DIR}/include/graph)
else ()
  add_library(graph INTERFACE ${SOURCE})
  target_include_directories(graph INTERFACE ${PROJECT_SOURCE_DIR}/include/graph)
endif ()